--- a/style.css
+++ b/style.css
@@ -12,35 +12,44 @@ body {
   min-width: 100vh;
 }
 
-nav{
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 110px;
 }
 
-ul{
+ul {
   list-style: none;
   display: flex;
   gap: 64px;
 }
 
-a{
- color: #ffffff;
+a {
+  color: #ffffff;
 }
 
-ul li a{
+ul li a {
+  font-weight: 500;
   text-decoration: none;
+  font-size: 14px;
+}
+
+ul li a:hover{
+  color: #00BFA6;
+}
+
+h1,
+ul {
   font-family: "JetBrains Mono", monospace;
 }
 
-.page{
+.page {
   width: 1000px;
   margin: 0 auto;
   padding-top: 71px;
 }
 
-main{
+main {
   display: flex;
-  
 }
